Angular JWT, console.log TOKEN working